--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <style name="Theme.InterviewProject" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    </style>
 </resources>
